【设计模式之普通工厂模式】