@@ -5,6 +5,8 @@ import com.Rectangle;
 import com.Shape;
 import com.Square;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * 创建一个工厂，生成基于给定信息的实体类的对象。
  */
@@ -35,12 +37,15 @@ public class ShapeFactory {
     public static <T> T getClass(Class<? extends T> clazz){
         T obj =null;
         try{
-            obj = (T) Class.forName(clazz.getName()).newInstance();
-        }catch (ClassNotFoundException e){
-            e.printStackTrace();
-        }catch (InstantiationException e){
+            obj = clazz.getDeclaredConstructor().newInstance();
+//            obj = (T) Class.forName(clazz.getName()).newInstance();
+        } catch (InstantiationException e){
             e.printStackTrace();
         }catch (IllegalAccessException e){
+            e.printStackTrace();
+        } catch (NoSuchMethodException e) {
+            e.printStackTrace();
+        } catch (InvocationTargetException e) {
             e.printStackTrace();
         }
         return obj;
